<resources>
    <string name="app_name">Masjid</string>
    <string-array name="roles_array">
        <item>warga</item>
        <item>takmir</item>
    </string-array>
    <string name="toast_text_email">Please enter email</string>
    <string name="toast_text_pwd">Please enter password</string>
    <string name="toast_text_wrong">Please enter email and password</string>
    <string name="toast_text_uname">Please enter username</string>
    <string name="toast_text_name">Please enter name</string>
</resources>

